--- a/limpieza_basica_duplicados.Rmd
+++ b/limpieza_basica_duplicados.Rmd
@@ -5,7 +5,7 @@ library(openxlsx)
 library(janitor)
 ```
 
-# lectura de datos
+# Lectura de datos
 
 ```{r}
 # Lectura de datos
@@ -17,12 +17,10 @@ df
 
 # DEPURAMOS DUPLICADOS
 
-
 ```{r}
 df %>% 
   get_dupes(cedula)
 ```
-
 
 ```{r}
 df %>% 
@@ -32,4 +30,6 @@ df %>%
   distinct(cedula, .keep_all = TRUE)
 ```
 
+```{r}
 
+```
