proyecto casi terminado

--- a/limpieza_basica_duplicados_Python.ipynb
+++ b/limpieza_basica_duplicados_Python.ipynb
@@ -2,23 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "# Importación librerías\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lectura de datos"
+    "# Lectura de datos\n",
+    "Leemos el archivo con la base de datos a probar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -414,13 +417,14 @@
        "26                NaN     387.0                 mferneq@webs.com  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_excel(\"bd_pruebas.xlsx\")\n",
+    "# Lectura de datos\n",
+    "df = pd.read_csv(\"bd_pruebas.csv\", delimiter=\";\")\n",
     "df"
    ]
   },
@@ -428,12 +432,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Borrar duplicados"
+    "# Campos de primer_nombre y primer_apellido con datos dobles\n",
+    "Separamos cuando primer_nombre o primer_apellido lleven también el segundo_nombre o segundo_apellido"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Esta es para nombre\n",
+    "try:\n",
+    "    df[['primer_nombre', 'segundo_nombre_temp']] = df['primer_nombre'].str.split(' ', expand=True)\n",
+    "    df['segundo_nombre_temp'] = df['segundo_nombre_temp'].replace({None: np.nan})\n",
+    "    df['segundo_nombre'] = df['segundo_nombre'].combine_first(df['segundo_nombre_temp'])\n",
+    "    df.drop(columns=['segundo_nombre_temp'], inplace=True)\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Esta es para apellidos\n",
+    "try:\n",
+    "    df[['primer_apellido', 'segundo_apellido_temp']] = df['primer_apellido'].str.split(' ', expand=True)\n",
+    "    df['segundo_apellido_temp'] = df['segundo_apellido_temp'].replace({None: np.nan})\n",
+    "    df['segundo_apellido'] = df['segundo_apellido'].combine_first(df['segundo_apellido_temp'])\n",
+    "    df.drop(columns=['segundo_apellido_temp'], inplace=True)\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Borrar duplicados\n",
+    "Unificamos los campos que sean de la misma persona y borramos duplicados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +787,7 @@
        "19     Cll 1 # 12 - 5     355.0       lescott8@timesonline.co.uk  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,20 +796,6 @@
     "df = df.groupby('cedula').apply(lambda group: group.ffill().bfill()).drop_duplicates('cedula').reset_index(drop=True)\n",
     "df"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Estandarizar direcciones\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
