--- a/webscrappingNombresApellidos.ipynb
+++ b/webscrappingNombresApellidos.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "df = pd.DataFrame({'Nombres': link_texts})\n",
     "\n",
     "# Guardar el DataFrame en un archivo xlsx\n",
-    "df.to_excel('db_nombres.xlsx', index=False)\n",
+    "df.to_csv('db_nombres.csv', index=False)\n",
     "\n",
     "# De aqui sigue borrar un par de registros que no sirven en el excel y ya"
    ]
